fix somes details

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -172,7 +172,7 @@
       },
       "exhibition": {
         "title": "Interactive Exhibition",
-        "desktop": "Using your cursor, click on the colored stars to discover some of the greatest discoveries by famous scientists through this wormhole.",
+        "desktop": "Using your cursor, click on the colored celestial bodies to discover some of the greatest discoveries of the famous scientist through this wormhole.",
         "button": "Let's go!",
         "mobile": "The mobile version is not supported. Please visit this page on a computer to enjoy the experience.",
         "backtohome": "Back to home"
