--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -176,7 +176,7 @@
       },
       "exhibition": {
         "title": "Exposition interactive",
-        "desktop": "À l'aide de votre curseur, cliquez sur les astres colorés pour découvrir quelques-unes des plus grandes découvertes des célèbres scientifiques à travers ce trou de verre.",
+        "desktop": "À l'aide de votre curseur, cliquez sur les astres colorés pour découvrir quelques-unes des plus grandes découvertes du célèbre scientifique à travers ce trou de verre.",
         "button": "C'est parti!",
         "mobile": "La version mobile n'est pas prise en charge. Veuillez visiter cette page sur un ordinateur pour profiter de l'expérience.",
         "backtohome": "Retour à l'accueil"
