add readme, accessibility, convert webp

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -31,7 +31,7 @@
       "sectionTitle": "À la poursuite de la lumière, une exposition des travaux d'Albert Einstein",
       "paragraph": "Notre perception du temps et de l’espace a été bouleversée par les découvertes d’Albert Einstein. Avec la relativité restreinte, il a démontré que le temps n’est pas absolu, mais qu’il s’écoule différemment selon la vitesse d’un observateur. La relativité générale a ensuite révélé que la gravité déforme l’espace-temps, influençant ainsi le parcours de la lumière et la structure même de l’univers. De l’expérience du train en mouvement à la courbure gravitationnelle des rayons lumineux, cette exposition vous invite à explorer ces concepts fascinants qui ont changé notre compréhension du monde.",
       "ticketInfo": "Entrée gratuite sur réservation",
-      "allaudience": "Tous public",
+      "allaudience": "Tous publics",
       "reserveButton": "Réservez vos places",
       "imgfooter": "Albert Einstein, né le 14 mars 1879 à Ulm."
     },
